@@ -4,6 +4,7 @@ User visible changes in Hatari (Python Gtk) UI
 
 2011-01:
 - Use new Gtk v1.12 tooltip API
+- Support capture cropping
 
 2010-10:
 - Improvements to text & key inserting
